2006-06-03  Andreas Köhler  <andi5.py@gmx.net>

	* src/register/register-gnome/gnucash-sheet.c: Add GDK_Menu as
	  shortcut for showing register popups. Fixes 343244.

2006-06-02  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: 
	* src/gnome-utils/gnc-window.c: The progress bar changes size when
	text is added/removed.  Prevent these changes by setting the text
	to a single space when there is no text to display.  Fixes
	#343455.

	* src/gnome/window-reconcile.c: Limit the reconciliation date to
	the past or today, never the future.  Fixes #343527.

2006-06-01  Derek Atkins  <derek@ihtfp.com>

	* configure.in: Don't need to patch libtool for darwin anymore.
	  Patch by David Reiser.
	* src/gnome-utils/dialog-preferences.c: fix non-C99 construct so
	  the file builds again.

	* po/nb.po: updated Norwegian Bokmål translation by Sigve Indregard

	* src/backend/Makefile.am:
	* src/backend/gnc-backend-api.h:
	  deleted gnc-backend-api.h, which isn't needed by anything
	* src/backend/file/gnc-backend-file.[ch]:
	  make "gnc_new_backend()" into a private function.  It's
	  never called from anywhere, so it's not needed in the API.
	* src/backend/file/Makefile.am:
	  Build a shared library (libgnc-backend-file-utils) and a
	  loadable module (libgnc-backend-file).  This should let us
	  build on MacOS AND windows.
	* src/business/business-core/file/Makefile.am:
	* src/gnome/Makefile.am:
	  link against libgnc-backend-file-utils

2006-06-01  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-preferences.c: Do not try to find
	  positions for alphabetic insertions of add_on pages, but rather
	  append and then sort pages in the end. Solves appearance of pref
	  dialog in non-C locales.

	* src/gnome-utils/glade/preferences.glade: Move "Accounting
	  Period" to the top, regardless of above.

	* src/gnome-utils/gnc-main-window.c: Cancel renaming of a page
	  when GDK_Escape is pressed. Fixes #343226.
